Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -271,13 +271,13 @@
        "'Solta'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities["
+    "top_travel_cities[0]"
    ]
   },
   {
