--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -262,22 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Solta'"
+       "'Buenos Aires'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[0]\n"
+    "top_travel_cities[0]\n",
+    "top_travel_cities[1]\n",
+    "top_travel_cities[2]"
    ]
   },
   {
